# CuriosityCore

./: .gitignore  JustVoice.py  README.md  main.py  pyproject.toml
