[tool.poetry]
name = "oracleturret"
version = "0.1.0"
description = ""
authors = ["Kokonico <kokonico@duck.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
simpleaudio = "^1.0.4"
pygame = "^2.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
